<resources>
    <string name="app_name" translatable="false">Todo App</string>
    <string name="my_tasks">My tasks</string>
    <string name="more_info">More info</string>
    <string name="done">Done - %d</string>
    <string name="show_done_tasks">Show done tasks</string>
    <string name="add_todo_task">Add todo task</string>
    <string name="what_to_do">What to do…</string>
    <string name="save">SAVE</string>
    <string name="importance">Importance</string>
    <string name="deadline">Deadline</string>
    <string name="delete">Delete</string>
    <string name="importance_low">Low</string>
    <string name="importance_normal">Normal</string>
    <string name="importance_urgent">Urgent</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="visibility_content">Show done tasks</string>
    <string name="visibility_title">Visibility</string>
    <string name="item_swipe">Item swipe</string>
    <string name="close">Close</string>
    <string name="mark_done">Mark done</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">Cancel</string>
    <string name="new_todo">New</string>
    <string name="refresh">Refresh</string>
    <string name="network_error_404">Resource not found</string>
    <string name="network_error_401">Unauthorized access to resource</string>
    <string name="network_error_403">Access forbidden</string>
    <string name="network_error_408">Request timeout</string>
    <string name="network_error_500">Internal server error</string>
    <string name="network_error_0">Probably no internet</string>
    <string name="yandex_login">Yandex login</string>
    <string name="api_key_login">Api key login</string>
    <string name="title_network" translatable="false">Network Module</string>
    <string name="title_feature_auth" translatable="false">Auth Module</string>
    <string name="title_feature_todo" translatable="false">Todo Feature</string>
    <string name="title_core" translatable="false">Core Module</string>
</resources>