<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailViewFlipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:elevation="4dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/todoDetailTopAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/background"
                app:navigationIcon="@drawable/close">

                <Button
                    android:id="@+id/detailSaveButton"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="16dp"
                    android:lineSpacingExtra="10dp"
                    android:text="@string/save"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />


            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/taskTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:autofillHints="no"
            android:background="@drawable/on_background_radius_shape"
            android:hint="@string/what_to_do"
            android:inputType="text"
            android:lineSpacingExtra="2dp"
            android:minHeight="104dp"
            android:padding="16dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/importanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:lineSpacingExtra="2.75dp"
            android:text="@string/importance"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/actualImportanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="2.5dp"
            android:text="@string/importance_no"
            android:textColor="@color/light_gray"
            android:textSize="14sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="28dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/deadlineTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2.75dp"
                    android:text="@string/deadline"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/actualDeadlineTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:lineSpacingExtra="2.5dp"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:visibility="gone" />

            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/deadlineSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/detailDeleteButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/delete"
            android:textColor="@color/red"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/delete"
            app:iconTint="@color/red" />

    </LinearLayout>

    <TextView
        android:id="@+id/detailErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp" />

    <ProgressBar
        android:id="@+id/detailProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</ViewFlipper>